add create-doctor
