# src/modules/doctor/entities/doctor.entity.ts
@@ -4,16 +4,16 @@ import { CustomError } from "../../../error/custom.error";
 export type DoctorProps = {
   email: string;
   crm: string;
-  user_id: string;
-  speciality_id: string;
+  userId: string;
+  specialityId: string;
 }
 
 export class Doctor {
   id: string;
   crm: string;
   email: string;
-  user_id: string;
-  speciality_id: string;
+  userId: string;
+  specialityId: string;
 
   private constructor(props: DoctorProps) {
     if (!props.crm) {
@@ -31,8 +31,8 @@ export class Doctor {
     this.id = randomUUID();
     this.crm = props.crm;
     this.email = props.email;
-    this.user_id = props.user_id;
-    this.speciality_id = props.speciality_id;
+    this.userId = props.userId;
+    this.specialityId = props.specialityId;
   }
 
   static create(props: DoctorProps) {
