# src/modules/users/entities/user.entity.ts
@@ -1,4 +1,6 @@
 import { randomUUID } from "crypto";
+import { ParameterRequiredError } from "../../../error/parameter-required.error";
+import { PasswordBcrypt } from "../../../infra/shared/crypto/password.bcrypt";
 
 type IUser = {
   name: string,
@@ -15,6 +17,10 @@ export class User {
   createdAt: Date;
 
   private constructor(props: IUser) {
+    if (!props.username || !props.password) {
+      throw new ParameterRequiredError('Username/password is required!', 422);
+    }
+
     this.id = randomUUID();
     this.name = props.name;
     this.username = props.username;
@@ -23,8 +29,18 @@ export class User {
     this.createdAt = new Date();
   }
 
-  static create(props: IUser) {
-    const user = new User(props);
+  static async create(props: IUser) {
+    if (!props.password) {
+      throw new ParameterRequiredError('Username/password is required!', 422);
+    }
+
+    const bcrypt = new PasswordBcrypt();
+    const passwordHashed = await bcrypt.passwordHash(props.password);
+
+    const user = new User({
+      ...props,
+      password: passwordHashed
+    });
     return user;
   }
 }
