# swagger.json
@@ -63,6 +63,31 @@
           }
         }
       }
+    },
+    "/doctors": {
+      "post": {
+        "description": "Cadastro de um médico",
+        "tags": [
+          "doctors"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/DoctorRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Médico criado com sucesso"
+          },
+          "400": {
+            "description": "Erro de cadastro"
+          }
+        }
+      }
     }
   },
   "components": {
@@ -127,6 +152,42 @@
             "type": "string",
             "description": "Password de login",
             "example": "password_test"
+          }
+        }
+      },
+      "DoctorRequest": {
+        "type": "object",
+        "properties": {
+          "email": {
+            "type": "string",
+            "description": "E-mail do médico",
+            "example": "example@mail.com"
+          },
+          "crm": {
+            "type": "string",
+            "description": "CRM do médico",
+            "example": "123456",
+            "length": 6
+          },
+          "name": {
+            "type": "string",
+            "description": "Name do médico",
+            "example": "name_test"
+          },
+          "username": {
+            "type": "string",
+            "description": "Username do médico",
+            "example": "username_test"
+          },
+          "password": {
+            "type": "string",
+            "description": "Senha do médico",
+            "example": "password_test"
+          },
+          "specialityId": {
+            "type": "string",
+            "description": "Identificação única despecialidade",
+            "format": "uuid"
           }
         }
       }
